--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: Hi!
+title: nithril.github.io
 email: nithril@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. This site is already awesome?!
+  Write an awesome description for your new site here. This site is already awesome!
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://nithril.github.io" # the base hostname & protocol for your site
 twitter_username: NicolasLabrot
