--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ markdown: kramdown
 
 # The title and tagline is showed on homepage
 #
-title :  Nithril
-tagline: Nithril's Blog
+title :  "-"
+tagline: "-"
 
 # Information about author
 #
