Fix processedMessageCounter increment issue

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,17 @@
 permalink: /:categories/:year/:month/:day/:title 
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
-highlighter: pygments
+# highlighter: rouge
+
+
 
 markdown: kramdown
+
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
+
+
 
 # The title and tagline is showed on homepage
 #
