--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,9 @@
 permalink: /:categories/:year/:month/:day/:title 
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
-# highlighter: rouge
+
+
+highlighter: rouge
 
 
 
@@ -12,7 +14,17 @@ markdown: kramdown
 kramdown:
   input: GFM
   syntax_highlighter: rouge
-
+  # Rouge Highlighter in Kramdown › http://kramdown.gettalong.org/syntax_highlighter/rouge.html
+  # span, block element options fall back to global
+  syntax_highlighter_opts:
+    # Rouge Options › https://github.com/jneen/rouge#full-options
+    css_class: 'highlight'
+    #line_numbers: true # bad idea, spans don't need linenos and would inherit this option
+    span:
+      line_numbers: false
+    block:
+      line_numbers: true
+      start_line: 1
 
 
 # The title and tagline is showed on homepage
